small fix on langind page container z-index

--- a/static/css/landing_page.css
+++ b/static/css/landing_page.css
@@ -14,13 +14,14 @@
 }
 
 .hero__btn {
+    width: 200px;
     display: block;
     position: relative;
     height: 100px;
-        left: 50%;
-    transform: translateX(-50%);
+    left: 35%;
+    transform: translateX(-75%);
     padding: 0 12px;
-        z-index: 10;
+    z-index: 10;
 
 }
 
